--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-247172587\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--862985412\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,39 +104,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="logout">logout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.Registration" class="method navigator-link" hash-for-method="registration">registration</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="log">log</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="ordersEntry">ordersEntry</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withItemDiscount">withItemDiscount</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withoutItemDiscountPrice">withoutItemDiscountPrice</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -151,22 +122,16 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
+              <span class="class-name">com.dinamic.v3.test.tescases.Registration</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="logout">
-                  </a> <!-- logout -->
-                  <span class="method-name">logout</span>
-                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for element to be clickable: By.xpath: //a[normalize-space()=&apos;Logout&apos;] (tried for 10 second(s) with 2000 milliseconds interval)
-Build info: version: &apos;4.1.4&apos;, revision: &apos;535d840ee2&apos;
-System info: host: &apos;DESKTOP-E21T489&apos;, ip: &apos;172.16.1.31&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.2&apos;
-Driver info: driver.version: unknown
-	at org.openqa.selenium.support.ui.FluentWait.timeoutException(FluentWait.java:263)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:231)
-	at com.dinamic.v3.test.pages.OMSPage.logout(OMSPage.java:325)
-	at com.dinamic.v3.test.tescases.OrdersTestCase.logout(OrdersTestCase.java:68)
+                  <a name="registration">
+                  </a> <!-- registration -->
+                  <span class="method-name">registration</span>
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.manage()&quot; because &quot;this.driver&quot; is null
+	at com.dinamic.v3.test.tescases.Registration.registration(Registration.java:48)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -201,46 +166,10 @@ Driver info: driver.version: unknown
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="log">
-                  </a> <!-- log -->
-                  <span class="method-name">log</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ordersEntry">
-                  </a> <!-- ordersEntry -->
-                  <span class="method-name">ordersEntry</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withItemDiscount">
-                  </a> <!-- withItemDiscount -->
-                  <span class="method-name">withItemDiscount</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withoutItemDiscountPrice">
-                  </a> <!-- withoutItemDiscountPrice -->
-                  <span class="method-name">withoutItemDiscountPrice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-247172587\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--862985412\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -249,7 +178,7 @@ Driver info: driver.version: unknown
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.OrdersTestCase&quot;/&gt;
+      &lt;class name=&quot;com.dinamic.v3.test.tescases.Registration&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -289,32 +218,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'withItemDiscount')
-data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 47810);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'withoutItemDiscountPrice')
-data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(1, 3, 19236);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'logout')
-data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(2, 3, 10425);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ordersEntry')
-data.setCell(3, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(3, 3, 8032);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'log')
-data.setCell(4, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(4, 3, 468);
+data.setCell(0, 1, 'registration')
+data.setCell(0, 2, 'com.dinamic.v3.test.tescases.Registration')
+data.setCell(0, 3, 13);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 13 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -340,36 +253,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dinamic.v3.test.tescases.Registration</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">browserConfiguration</span>
+                <span class="method-name">start</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">log</span>
-                <span class="method-start">6104 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ordersEntry</span>
-                <span class="method-start">6580 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">14616 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withItemDiscount</span>
-                <span class="method-start">33855 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">logout</span>
-                <span class="method-start">81668 ms</span>
+                <span class="method-name">registration</span>
+                <span class="method-start">4341 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">close</span>
-                <span class="method-start">92116 ms</span>
+                <span class="method-start">4367 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
