--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--822335013\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--869159026\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="log">log</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -114,7 +114,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="orderDiscount">orderDiscount</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="ordersEntry">ordersEntry</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="tableName">tableName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -147,9 +157,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="log">
-                  </a> <!-- log -->
-                  <span class="method-name">log</span>
+                  <a name="login">
+                  </a> <!-- login -->
+                  <span class="method-name">login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -161,9 +171,23 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="orderDiscount">
+                  </a> <!-- orderDiscount -->
+                  <span class="method-name">orderDiscount</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="ordersEntry">
                   </a> <!-- ordersEntry -->
                   <span class="method-name">ordersEntry</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="tableName">
+                  </a> <!-- tableName -->
+                  <span class="method-name">tableName</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -185,7 +209,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--822335013\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--869159026\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -234,27 +258,35 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'withItemDiscount')
 data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 44587);
+data.setCell(0, 3, 44347);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'withoutItemDiscountPrice')
 data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(1, 3, 14049);
+data.setCell(1, 3, 16029);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ordersEntry')
 data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(2, 3, 6042);
+data.setCell(2, 3, 5805);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'logout')
+data.setCell(3, 1, 'orderDiscount')
 data.setCell(3, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(3, 3, 3391);
+data.setCell(3, 3, 4486);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'log')
+data.setCell(4, 1, 'logout')
 data.setCell(4, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(4, 3, 336);
+data.setCell(4, 3, 3378);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'tableName')
+data.setCell(5, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
+data.setCell(5, 3, 2450);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'login')
+data.setCell(6, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
+data.setCell(6, 3, 332);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -291,28 +323,36 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">log</span>
-                <span class="method-start">4069 ms</span>
+                <span class="method-name">login</span>
+                <span class="method-start">4767 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ordersEntry</span>
-                <span class="method-start">4415 ms</span>
+                <span class="method-start">5111 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">10459 ms</span>
+                <span class="method-start">10924 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withItemDiscount</span>
-                <span class="method-start">24510 ms</span>
+                <span class="method-start">26956 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">orderDiscount</span>
+                <span class="method-start">71306 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">tableName</span>
+                <span class="method-start">75793 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">logout</span>
-                <span class="method-start">69100 ms</span>
+                <span class="method-start">78245 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">72494 ms</span>
+                <span class="method-start">81624 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
