--- a/Dinamic V3/test-output/old/Default suite/methods.html
+++ b/Dinamic V3/test-output/old/Default suite/methods.html
@@ -1,18 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:55:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:55:35</td>   <td>24506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withItemDiscount()[pri:3, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withItemDiscount</td> 
-  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:56:23</td>   <td>72491</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:55:14</td>   <td>4065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">log</td> 
-  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:55:21</td>   <td>10455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withoutItemDiscountPrice</td> 
-  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:56:19</td>   <td>69096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.logout()[pri:4, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">logout</td> 
-  <td>main@121167003</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:55:14</td>   <td>4411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">ordersEntry</td> 
-  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:52:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:53:46</td>   <td>81618</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:52:35</td>   <td>10918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">withoutItemDiscountPrice</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:53:42</td>   <td>78239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.logout()[pri:6, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">logout</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:52:51</td>   <td>26950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withItemDiscount()[pri:3, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">withItemDiscount</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:52:29</td>   <td>4761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.login()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">login</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:52:29</td>   <td>5105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">ordersEntry</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:53:35</td>   <td>71300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.orderDiscount()[pri:4, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">orderDiscount</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/13 12:53:40</td>   <td>75787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.tableName()[pri:5, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">tableName</td> 
+  <td>main@1664576493</td>   <td></td> </tr>
 </table>
