--- a/Dinamic V3/test-output/emailable-report.html
+++ b/Dinamic V3/test-output/emailable-report.html
@@ -9,16 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">81,958</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,321</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m0">login</a></td><td rowspan="1">1670916149296</td><td rowspan="1">332</td></tr><tr class="passedeven"><td><a href="#m1">logout</a></td><td rowspan="1">1670916222774</td><td rowspan="1">3378</td></tr><tr class="passedeven"><td><a href="#m2">orderDiscount</a></td><td rowspan="1">1670916215835</td><td rowspan="1">4486</td></tr><tr class="passedeven"><td><a href="#m3">ordersEntry</a></td><td rowspan="1">1670916149640</td><td rowspan="1">5805</td></tr><tr class="passedeven"><td><a href="#m4">tableName</a></td><td rowspan="1">1670916220322</td><td rowspan="1">2450</td></tr><tr class="passedeven"><td><a href="#m5">withItemDiscount</a></td><td rowspan="1">1670916171485</td><td rowspan="1">44347</td></tr><tr class="passedeven"><td><a href="#m6">withoutItemDiscountPrice</a></td><td rowspan="1">1670916155453</td><td rowspan="1">16029</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.dinamic.v3.test.tescases.MyAcountTestCase</td><td><a href="#m0">enterPin</a></td><td rowspan="1">1671427915107</td><td rowspan="1">3943</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1671427914777</td><td rowspan="1">317</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.dinamic.v3.test.tescases.OrdersTestCase#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.dinamic.v3.test.tescases.OrdersTestCase#logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.dinamic.v3.test.tescases.OrdersTestCase#orderDiscount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.dinamic.v3.test.tescases.OrdersTestCase#ordersEntry</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.dinamic.v3.test.tescases.OrdersTestCase#tableName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.dinamic.v3.test.tescases.OrdersTestCase#withItemDiscount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.dinamic.v3.test.tescases.OrdersTestCase#withoutItemDiscountPrice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.dinamic.v3.test.tescases.MyAcountTestCase#enterPin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.dinamic.v3.test.tescases.MyAcountTestCase#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
