--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--869159026\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-50963664\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,37 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.MyAcountTestCase" class="method navigator-link" hash-for-method="enterPin">enterPin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="logout">logout</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="orderDiscount">orderDiscount</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="ordersEntry">ordersEntry</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="tableName">tableName</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withItemDiscount">withItemDiscount</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withoutItemDiscountPrice">withoutItemDiscountPrice</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.MyAcountTestCase" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -152,9 +127,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dinamic.v3.test.tescases.OrdersTestCase</span>
+              <span class="class-name">com.dinamic.v3.test.tescases.MyAcountTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="enterPin">
+                  </a> <!-- enterPin -->
+                  <span class="method-name">enterPin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="login">
@@ -162,54 +144,12 @@
                   <span class="method-name">login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="logout">
-                  </a> <!-- logout -->
-                  <span class="method-name">logout</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="orderDiscount">
-                  </a> <!-- orderDiscount -->
-                  <span class="method-name">orderDiscount</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ordersEntry">
-                  </a> <!-- ordersEntry -->
-                  <span class="method-name">ordersEntry</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="tableName">
-                  </a> <!-- tableName -->
-                  <span class="method-name">tableName</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withItemDiscount">
-                  </a> <!-- withItemDiscount -->
-                  <span class="method-name">withItemDiscount</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withoutItemDiscountPrice">
-                  </a> <!-- withoutItemDiscountPrice -->
-                  <span class="method-name">withoutItemDiscountPrice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--869159026\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-50963664\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -218,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dinamic.v3.test.tescases.OrdersTestCase&quot;/&gt;
+      &lt;class name=&quot;com.dinamic.v3.test.tescases.MyAcountTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -258,40 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'withItemDiscount')
-data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 44347);
+data.setCell(0, 1, 'enterPin')
+data.setCell(0, 2, 'com.dinamic.v3.test.tescases.MyAcountTestCase')
+data.setCell(0, 3, 3943);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'withoutItemDiscountPrice')
-data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(1, 3, 16029);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ordersEntry')
-data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(2, 3, 5805);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'orderDiscount')
-data.setCell(3, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(3, 3, 4486);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'logout')
-data.setCell(4, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(4, 3, 3378);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'tableName')
-data.setCell(5, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(5, 3, 2450);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'login')
-data.setCell(6, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(6, 3, 332);
+data.setCell(1, 1, 'login')
+data.setCell(1, 2, 'com.dinamic.v3.test.tescases.MyAcountTestCase')
+data.setCell(1, 3, 317);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -317,42 +237,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dinamic.v3.test.tescases.OrdersTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dinamic.v3.test.tescases.MyAcountTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">browserConfiguration</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">4767 ms</span>
+                <span class="method-start">4794 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ordersEntry</span>
-                <span class="method-start">5111 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">10924 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withItemDiscount</span>
-                <span class="method-start">26956 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">orderDiscount</span>
-                <span class="method-start">71306 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">tableName</span>
-                <span class="method-start">75793 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">logout</span>
-                <span class="method-start">78245 ms</span>
+                <span class="method-name">enterPin</span>
+                <span class="method-start">5124 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">81624 ms</span>
+                <span class="method-start">9069 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
