--- a/Dinamic V3/test-output/old/Default suite/methods-not-run.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,9 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.cancelOrder</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.withItemDiscount</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.logout</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.withoutItemDiscountPrice</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.tableName</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.care</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.orderDiscount</td></tr>
 </table>
