--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>22/12/19 11:01:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MyAcountTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.MyAcountTestCase@6fd83fc1]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@443384617</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/19 11:01:59</td>   <td>9065</td> <td>&nbsp;</td><td title="&lt;&lt;MyAcountTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.MyAcountTestCase@6fd83fc1]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@443384617</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/19 11:01:55</td>   <td>5120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAcountTestCase.enterPin()[pri:8, instance:com.dinamic.v3.test.tescases.MyAcountTestCase@6fd83fc1]">enterPin</td> 
-  <td>main@443384617</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/19 11:01:54</td>   <td>4790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAcountTestCase.login()[pri:7, instance:com.dinamic.v3.test.tescases.MyAcountTestCase@6fd83fc1]">login</td> 
-  <td>main@443384617</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/03/09 17:03:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/03/09 17:04:48</td>   <td>53058</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/03/09 17:04:00</td>   <td>5143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.login()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">login</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/03/09 17:04:05</td>   <td>10461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">ordersEntry</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
 </table>
