--- a/Dinamic V3/test-output/old/Suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dac5ef">  <td>22/11/29 10:52:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteCategory.deletingCategory()[pri:0, instance:com.dinamic.v3.test.DeleteCategory@20ccf40b]">deletingCategory</td> 
-  <td>main@1855026648</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/11/29 10:52:05</td>   <td>-30333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.registration()[pri:0, instance:com.dinamic.v3.test.Registration@76c3e77a]">registration</td> 
-  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/02/10 11:15:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CareTestCases.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.CareTestCases@741a8937]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>23/02/10 11:15:15</td>   <td>7270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CareTestCases.login()[pri:0, instance:com.dinamic.v3.test.tescases.CareTestCases@741a8937]">login</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
 </table>
